--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,4 +3,4 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/auly4815/public_html/
     - /bin/cp index.html $DEPLOYPATH
-    - /bin/cp -R img $DEPLOYPATH
+    - /bin/cp -R assets $DEPLOYPATH
